--- a/components/camel-braintree/src/main/docs/braintree-component.adoc
+++ b/components/camel-braintree/src/main/docs/braintree-component.adoc
@@ -74,7 +74,6 @@ with the following path and query parameters:
 [width="100%",cols="2,5,^1,2",options="header"]
 |===
 | Name | Description | Default | Type
-| *accessToken* (common) | The access token granted to a merchant. |  | String
 | *environment* (common) | The environment Either SANDBOX or PRODUCTION |  | String
 | *inBody* (common) | Sets the name of a parameter to be passed in the exchange In Body |  | String
 | *merchantId* (common) | The merchant id provided by Braintree. |  | String
@@ -83,6 +82,7 @@ with the following path and query parameters:
 | *bridgeErrorHandler* (consumer) | Allows for bridging the consumer to the Camel routing Error Handler which mean any exceptions occurred while the consumer is trying to pickup incoming messages or the likes will now be processed as a message and handled by the routing Error Handler. By default the consumer will use the org.apache.camel.spi.ExceptionHandler to deal with exceptions that will be logged at WARN or ERROR level and ignored. | false | boolean
 | *exceptionHandler* (consumer) | To let the consumer use a custom ExceptionHandler. Notice if the option bridgeErrorHandler is enabled then this options is not in use. By default the consumer will deal with exceptions that will be logged at WARN or ERROR level and ignored. |  | ExceptionHandler
 | *exchangePattern* (consumer) | Sets the exchange pattern when the consumer creates an exchange. |  | ExchangePattern
+| *accessToken* (advanced) | The access token granted by a merchant to another in order to process transactions on their behalf. Used in place of environment merchant id public key and private key fields. |  | String
 | *httpReadTimeout* (advanced) | Set read timeout for http calls. |  | Integer
 | *synchronous* (advanced) | Sets whether synchronous processing should be strictly used or Camel is allowed to use asynchronous processing (if supported). | false | boolean
 | *httpLogLevel* (logging) | Set logging level for http calls see java.util.logging.Level |  | String
@@ -132,16 +132,20 @@ type *org.apache.camel.component.braintree.BraintreeConfiguration*.
 [cols="<,<,<",options="header",]
 |=======================================================================
 |Option |Type |Description
-|environment |String |value that specifies where requests should be
+|environment |String |Value that specifies where requests should be
 directed – sandbox or production
 
-|merchantId |String |a unique identifier for your gateway account, which
+|merchantId |String |A unique identifier for your gateway account, which
 is different than your merchant account ID
 
-|publicKey |String |user-specific public identifier
+|publicKey |String |User-specific public identifier
 
-|privateKey |String |user-specific secure identifier that should not be
+|privateKey |String |User-specific secure identifier that should not be
 shared – even with us!
+
+|accessToken |String |Token granted to a merchant using Braintree Auth
+allowing them to process transactions on another's behalf. Used in place
+of the environment, merchantId, publicKey and privateKey options.
 |=======================================================================
 
 All the options above are provided by Braintree Payments
@@ -367,6 +371,9 @@ braintree://merchantAccount/endpoint?[options]
 |create |  |request
 |com.braintreegateway.Result<com.braintreegateway.MerchantAccount>
 
+|createForCurrency |  |currencyRequest
+|com.braintreegateway.Result<com.braintreegateway.MerchantAccount>
+
 |find |  |id |com.braintreegateway.MerchantAccount
 
 |update |  |id, request
@@ -381,6 +388,7 @@ URI Options for _merchantAccount_
 |Name |Type
 |id |String
 |request |com.braintreegateway.MerchantAccountRequest
+|currencyRequest |com.braintreegateway.MerchantAccountCreateForCurrencyRequest
 |====================================================
 
 #### Endpoint prefix _paymentMethod_
@@ -401,7 +409,7 @@ braintree://paymentMethod/endpoint?[options]
 |create |  |request
 |com.braintreegateway.Result<com.braintreegateway.PaymentMethod>
 
-|delete |  |token
+|delete |  |token, deleteRequest
 |com.braintreegateway.Result<com.braintreegateway.PaymentMethod>
 
 |find |  |token |com.braintreegateway.PaymentMethod
@@ -418,6 +426,7 @@ URI Options for _paymentMethod_
 |Name |Type
 |token |String
 |request |com.braintreegateway.PaymentMethodRequest
+|deleteRequest |com.braintreegateway.PaymentMethodDeleteRequest
 |==================================================
 
 #### Endpoint prefix _paymentMethodNonce_
@@ -584,7 +593,7 @@ braintree://transaction/endpoint?[options]
 |releaseFromEscrow |  |id
 |com.braintreegateway.Result<com.braintreegateway.Transaction>
 
-|refund |  |id, amount
+|refund |  |id, amount, refundRequest
 |com.braintreegateway.Result<com.braintreegateway.Transaction>
 
 |sale |  |request
@@ -612,6 +621,7 @@ URI Options for _transaction_
 |id |String
 |request |com.braintreegateway.TransactionCloneRequest
 |cloneRequest |com.braintreegateway.TransactionCloneRequest
+|refundRequest |com.braintreegateway.TransactionRefundRequest
 |amount |BigDecimal
 |query |com.braintreegateway.TransactionSearchRequest
 |==========================================================
